--- a/app/views/features/gallery.html.erb
+++ b/app/views/features/gallery.html.erb
@@ -134,13 +134,13 @@
   <div class="filter clearfix">
     <section class="pull-left">
       <span>Filter:</span>
-      <a href="#" class="active">Liked</a>
-      <a href="#">Visited</a>
+      <%= link_to "Liked", "#", class: "active" %>
+      <%= link_to "Visited", "#" %>
     </section>
     <section class="pull-right">
       <span>Sort by:</span>
-      <a href="#" class="active">Size</a>
-      <a href="#">Name</a>
+      <%= link_to "Size", "#", class: "active" %>
+      <%= link_to "Name", "#" %>
     </section>
   </div>
 </div>
