--- a/app/views/lists/datatables.html.erb
+++ b/app/views/lists/datatables.html.erb
@@ -40,7 +40,7 @@
     <tbody>
       <tr>
         <td>
-          <a href="#">#1445</a>
+          <%= link_to "#1445", "#" %>
         </td>
         <td>John Stewart</td>
         <td>Mar 11, 11:50am</td>
@@ -49,7 +49,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1897</a>
+          <%= link_to "#1897", "#" %>
         </td>
         <td>Andrea</td>
         <td>Mar 10, 06:50am</td>
@@ -58,7 +58,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1089</a>
+          <%= link_to "#1089", "#" %>
         </td>
         <td>John Stewart</td>
         <td>Mar 08, 01:43pm</td>
@@ -67,7 +67,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1883</a>
+          <%= link_to "#1883", "#" %>
         </td>
         <td>Pete</td>
         <td>Mar 07, 07:30pm</td>
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1383</a>
+          <%= link_to "#1383", "#" %>
         </td>
         <td>John Stewart</td>
         <td>Mar 07, 04:30pm</td>
@@ -85,7 +85,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1266</a>
+          <%= link_to "#1266", "#" %>
         </td>
         <td>Patrick Johnson</td>
         <td>Mar 07, 02:30pm</td>
@@ -94,7 +94,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1645</a>
+          <%= link_to "#1645", "#" %>
         </td>
         <td>Karen Diaz</td>
         <td>Mar 04, 04:30pm</td>
@@ -103,7 +103,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1864</a>
+          <%= link_to "#1864", "#" %>
         </td>
         <td>Matthew Williams</td>
         <td>Mar 02, 06:22pm</td>
@@ -112,7 +112,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#5192</a>
+          <%= link_to "#5192", "#" %>
         </td>
         <td>John Stewart</td>
         <td>Mar 01, 07:44pm</td>
@@ -121,7 +121,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1837</a>
+          <%= link_to "#1837", "#" %>
         </td>
         <td>Matthew Williams</td>
         <td>Mar 11, 11:50am</td>
@@ -130,7 +130,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2397</a>
+          <%= link_to "#2397", "#" %>
         </td>
         <td>Matthew Williams</td>
         <td>Mar 11, 11:50am</td>
@@ -139,7 +139,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#4483</a>
+          <%= link_to "#4483", "#" %>
         </td>
         <td>John Smith</td>
         <td>Mar 04, 04:30pm</td>
@@ -148,7 +148,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#8734</a>
+          <%= link_to "#8734", "#" %>
         </td>
         <td>Lawrence Ebert</td>
         <td>Mar 11, 11:50am</td>
@@ -157,7 +157,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#7893</a>
+          <%= link_to "#7893", "#" %>
         </td>
         <td>Lawrence Ebert</td>
         <td>Mar 04, 04:30pm</td>
@@ -166,7 +166,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1937</a>
+          <%= link_to "#1937", "#" %>
         </td>
         <td>John Smith</td>
         <td>Mar 11, 11:50am</td>
@@ -175,7 +175,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2093</a>
+          <%= link_to "#2093", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 04, 04:30pm</td>
@@ -184,7 +184,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#5792</a>
+          <%= link_to "#5792", "#" %>
         </td>
         <td>Michelle</td>
         <td>Mar 11, 11:50am</td>
@@ -193,7 +193,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#6873</a>
+          <%= link_to "#6873", "#" %>
         </td>
         <td>Alexandra</td>
         <td>Mar 04, 04:30pm</td>
@@ -202,7 +202,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2983</a>
+          <%= link_to "#2983", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -211,7 +211,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1963</a>
+          <%= link_to "#1963", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -220,7 +220,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1665</a>
+          <%= link_to "#1665", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -229,7 +229,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2288</a>
+          <%= link_to "#2288", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 04, 04:30pm</td>
@@ -238,7 +238,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3978</a>
+          <%= link_to "#3978", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -247,7 +247,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#6876</a>
+          <%= link_to "#6876", "#" %>
         </td>
         <td>Lawrence Ebert</td>
         <td>Mar 04, 04:30pm</td>
@@ -256,7 +256,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#5872</a>
+          <%= link_to "#5872", "#" %>
         </td>
         <td>Erick</td>
         <td>Mar 11, 11:50am</td>
@@ -265,7 +265,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#8762</a>
+          <%= link_to "#8762", "#" %>
         </td>
         <td>Jade Alexandra</td>
         <td>Mar 11, 11:50am</td>
@@ -274,7 +274,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#5767</a>
+          <%= link_to "#5767", "#" %>
         </td>
         <td>Ernest Hemingway</td>
         <td>Mar 04, 04:30pm</td>
@@ -283,7 +283,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3855</a>
+          <%= link_to "#3855", "#" %>
         </td>
         <td>Ernest Hemingway</td>
         <td>Mar 11, 11:50am</td>
@@ -292,7 +292,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2375</a>
+          <%= link_to "#2375", "#" %>
         </td>
         <td>Ernest Hemingway</td>
         <td>Mar 04, 04:30pm</td>
@@ -301,7 +301,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#2885</a>
+          <%= link_to "#2885", "#" %>
         </td>
         <td>Ernest Hemingway</td>
         <td>Mar 11, 11:50am</td>
@@ -310,7 +310,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#1973</a>
+          <%= link_to "#1973", "#" %>
         </td>
         <td>Matthew Williams</td>
         <td>Mar 11, 11:50am</td>
@@ -319,7 +319,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Malorie Knox</td>
         <td>Mar 11, 11:50am</td>
@@ -328,7 +328,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Jack Sparrow</td>
         <td>Mar 11, 11:50am</td>
@@ -337,7 +337,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Andrea</td>
         <td>Mar 11, 11:50am</td>
@@ -346,7 +346,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -355,7 +355,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -364,7 +364,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -373,7 +373,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -382,7 +382,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -391,7 +391,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -400,7 +400,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -409,7 +409,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -418,7 +418,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Gonzalez</td>
         <td>Mar 11, 11:50am</td>
@@ -427,7 +427,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -436,7 +436,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Laura Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -445,7 +445,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Andrea</td>
         <td>Mar 11, 11:50am</td>
@@ -454,7 +454,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Andrea</td>
         <td>Mar 11, 11:50am</td>
@@ -463,7 +463,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Bill Gates</td>
         <td>Mar 11, 11:50am</td>
@@ -472,7 +472,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Bill Gates</td>
         <td>Mar 11, 11:50am</td>
@@ -481,7 +481,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Bill Gates</td>
         <td>Mar 11, 11:50am</td>
@@ -490,7 +490,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Steve Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -499,7 +499,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Steve Bill</td>
         <td>Mar 11, 11:50am</td>
@@ -508,7 +508,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>John</td>
         <td>Mar 11, 11:50am</td>
@@ -517,7 +517,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Karen</td>
         <td>Mar 11, 11:50am</td>
@@ -526,7 +526,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Carlton Douglas</td>
         <td>Mar 11, 11:50am</td>
@@ -535,7 +535,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Jade</td>
         <td>Mar 11, 11:50am</td>
@@ -544,7 +544,7 @@
       </tr>
       <tr>
         <td>
-          <a href="#">#3445</a>
+          <%= link_to "#3445", "#" %>
         </td>
         <td>Phillip Dionne</td>
         <td>Mar 11, 11:50am</td>
