--- a/app/views/pages/inbox.html.erb
+++ b/app/views/pages/inbox.html.erb
@@ -19,13 +19,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/6.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message active clearfix">
         <div class="time">
@@ -34,13 +34,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/5.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Karen Diaz</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -49,13 +49,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/3.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">John Stewart</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -64,13 +64,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/4.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">David Gilmour</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -79,13 +79,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/7.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -94,13 +94,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/8.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -109,13 +109,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/9.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -124,13 +124,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/10.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -139,13 +139,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/11.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -154,13 +154,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/12.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message clearfix">
         <div class="time">
@@ -169,13 +169,13 @@
         <div class="avatar pull-left">
           <%= image_tag "avatars/13.jpg" %>
         </div>
-        <a href="#" class="info pull-left">
+        <%= link_to "#", class: "info pull-left" do %>
           <span class="name">Jacob Sabludosky</span>
           <span class="subject">Design</span>
           <span class="intro">
             Hey dude, i'm sure you'll like this new approach to design some...
           </span>
-        </a>
+        <% end %>
       </div>
     </div>
     <div class="paging">
@@ -213,7 +213,7 @@
         <div class="body">
           <p>Hey there,</p>
           <p>
-            In the most anticipated announcement in physics since the discovery of the <a href="#">Higgs Boson</a>, the first detection of a gravitational wave has been reported. If verified, the find will dispel any lingering doubts about Relativity theory, transform our understanding of the universe's beginning and provide astrophysicists with a new tool to probe the universe. The importance of the detection is hard to overstate.
+            In the most anticipated announcement in physics since the discovery of the <%= link_to "Higgs Boson", "#" %>, the first detection of a gravitational wave has been reported. If verified, the find will dispel any lingering doubts about Relativity theory, transform our understanding of the universe's beginning and provide astrophysicists with a new tool to probe the universe. The importance of the detection is hard to overstate.
           </p>
           <p>
             As part of his General Theory of Relativity, Einstein predicted that acceleration of large masses would cause waves to ripple through space in a manner analogous to ripples on the surface of a pond. Indirect evidence abounds for gravitational waves, but almost a century after Einstein predicted it direct evidence remained elusive - until today's announcement by the Harvard-Smithsonian Center for Astrophysics. The paper is now available on arXiv.
@@ -221,16 +221,16 @@
         </div>
         <div class="attachments clearfix">
           <div class="attachment">
-            <a href="#">
+            <%= link_to "#" do %>
               <span class="file-type html">HTML</span>
               <span class="name">resume.html <span class="size">(5mb)</span></span>
-            </a>
+            <% end %>
           </div>
           <div class="attachment">
-            <a href="#">
+            <%= link_to "#" do %>
               <span class="file-type zip">ZIP</span>
               <span class="name">theme.zip <span class="size">(3.2mb)</span></span>
-            </a>
+            <% end %>
           </div>
         </div>
         <div class="reply">
@@ -244,31 +244,31 @@
       </div>
 
       <div class="message collapsed">
-        <a href="#">
+        <%= link_to "#" do %>
           <span class="sender">Andrea Lawrence</span>
           <span class="receiver">to Jon Snow</span>
           <span class="date pull-right">
             12th Feb, 9:38pm
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message collapsed">
-        <a href="#">
+        <%= link_to "#" do %>
           <span class="sender">Jon Snow</span>
           <span class="receiver">to Andrea Lawrence</span>
           <span class="date pull-right">
             9th Feb, 10:31am
           </span>
-        </a>
+        <% end %>
       </div>
       <div class="message collapsed">
-        <a href="#">
+        <%= link_to "#" do %>
           <span class="sender">Andrea Lawrence</span>
           <span class="receiver">to Jon Snow</span>
           <span class="date pull-right">
             31th Jan, 12:05pm
           </span>
-        </a>
+        <% end %>
       </div>
     </section>
   </div>
