--- a/app/views/pages/steps.html.erb
+++ b/app/views/pages/steps.html.erb
@@ -18,9 +18,9 @@
         Connect your Stripe account or create a new one to start receiving payments
       </div>
 
-      <a href="#" class="disabled button">
+      <%= link_to "#", class: "disabled button" do %>
         <span>Connect Stripe</span>
-      </a>
+      <% end %>
     </div>
     <div class="step clearfix done">
       <div class="info">
@@ -30,9 +30,9 @@
         Setup your email notification preferences for new payments
       </div>
 
-      <a href="#" class="disabled button">
+      <%= link_to "#", class: "disabled button" do %>
         <span>Setup notifications</span>
-      </a>
+      <% end %>
     </div>
     <div class="step clearfix">
       <div class="info">
@@ -40,9 +40,9 @@
         Invite your teammates to collaborate with you
       </div>
 
-      <a href="#" class="button">
+      <%= link_to "#", class: "button" do %>
         <span>Invite teammates</span>
-      </a>
+      <% end %>
     </div>
     <div class="step clearfix">
       <div class="info">
@@ -50,9 +50,9 @@
         Add some products to sell to your customers
       </div>
 
-      <a href="#" class="button">
+      <%= link_to "#", class: "button" do %>
         <span>Create products</span>
-      </a>
+      <% end %>
     </div>
     <div class="step clearfix">
       <div class="info">
@@ -60,9 +60,9 @@
         Activate your account live into production mode
       </div>
 
-      <a href="#" class="button">
+      <%= link_to "#", class: "button" do %>
         <span>Go live!</span>
-      </a>
+      <% end %>
     </div>
   </div>
 </div>
