--- a/app/views/pricing/charts.html.erb
+++ b/app/views/pricing/charts.html.erb
@@ -123,7 +123,7 @@
     <div class="row message">
       <p>
         All of our plans come with a 30 day trial with no credit card required, we also offer a
-        <a href="<%= form_pricing_index_path %>">free plan</a>.
+        <%= link_to "free plan", form_pricing_index_path %>.
       </p>
     </div>
     <div class="row faq">
