--- a/app/views/pricing/form.html.erb
+++ b/app/views/pricing/form.html.erb
@@ -74,10 +74,10 @@
         </div>
 
         <div class="action clearfix">
-        <a href="#" class="btn btn-success">
+        <%= link_to "#", class: "btn btn-success" do %>
           Make payment $250.00
           <i class="fa fa-chevron-right"></i>
-        </a>
+        <% end %>
       </div>
     </form>
   </div>
