--- a/app/views/reports/orders.html.erb
+++ b/app/views/reports/orders.html.erb
@@ -9,8 +9,8 @@
     Reports
   </div>
   <div class="options pull-right">
-    <a href="#"><i class="fa fa-print"></i> Print</a>
-    <a href="#"><i class="fa fa-download"></i> Download</a>
+    <%= link_to "<i class="fa fa-print"></i> Print", "#" %>
+    <%= link_to "<i class="fa fa-download"></i> Download", "#" %>
   </div>
 </div>
 
