--- a/app/views/account/billing.html.erb
+++ b/app/views/account/billing.html.erb
@@ -8,28 +8,28 @@
   <h3>My account</h3>
   <ul class="menu">
     <li>
-      <a href="<%= settings_account_index_path %>">
+      <%= link_to settings_account_index_path do %>
         <i class="ion-ios-person-outline"></i>
         Profile
-      </a>
+      <% end %>
     </li>
     <li>
-      <a href="<%= billing_account_index_path %>" class="active">
+      <%= link_to billing_account_index_path, class: "active" do %>
         <i class="ion-card"></i>
         Billing
-      </a>
+      <% end %>
     </li>
     <li>
-      <a href="<%= notifications_account_index_path %>">
+      <%= link_to notifications_account_index_path do %>
         <i class="ion-ios-email-outline"></i>
         Notifications
-      </a>
+      <% end %>
     </li>
     <li>
-      <a href="<%= support_account_index_path %>">
+      <%= link_to support_account_index_path do %>
         <i class="ion-ios-help-outline"></i>
         Support
-      </a>
+      <% end %>
     </li>
   </ul>
 </div>
@@ -43,10 +43,10 @@
     <div class="current-plan">
       <div class="field">
         <label>Plan:</label> Team Subscription ($29.00/month)
-        <a href="<%= plans_pricing_index_path %>" class="change-plan">
+        <%= link_to plans_pricing_index_path, class: "change-plan" do %>
           Change plan
           <i class="ion-edit"></i>
-        </a>
+        <% end %>
       </div>
 
       <div class="field">
@@ -66,10 +66,10 @@
       <label>Current credit card:</label>
       <%= image_tag "visa.png" %>
       <strong>Visa</strong> ending in <strong>0328.</strong>
-      <a href="#" class="manage-cc">
+      <%= link_to "#", class: "manage-cc" do %>
         Manage credit card
         <i class="ion-edit"></i>
-      </a>
+      <% end %>
       <span class="next">(next payment on <strong>Mar 02, 2014</strong>).</span>
     </div>
 
@@ -91,7 +91,7 @@
         </tr>
         <tr>
           <td>
-            <a href="<%= invoice_pricing_index_path %>">Nov 13, 2014 - Dec 13, 2014</a>
+            <%= link_to "Nov 13, 2014 - Dec 13, 2014", invoice_pricing_index_path %>
           </td>
           <td>
             $29.00 USD
@@ -100,12 +100,12 @@
             2014-11-13
           </td>
           <td>
-            <a href="#">download</a>
+            <%= link_to "download", "#" %>
           </td>
         </tr>
         <tr>
           <td>
-            <a href="<%= invoice_pricing_index_path %>">Oct 13, 2014 - Nov 13, 2014</a>
+            <%= link_to "Oct 13, 2014 - Nov 13, 2014", invoice_pricing_index_path %>
           </td>
           <td>
             $29.00 USD
@@ -114,12 +114,12 @@
             2014-10-13
           </td>
           <td>
-            <a href="#">download</a>
+            <%= link_to "download", "#" %>
           </td>
         </tr>
         <tr>
           <td>
-            <a href="<%= invoice_pricing_index_path %>">Sep 13, 2014 - Oct 13, 2014</a>
+            <%= link_to "Sep 13, 2014 - Oct 13, 2014", invoice_pricing_index_path %>
           </td>
           <td>
             $29.00 USD
@@ -128,7 +128,7 @@
             2014-09-13
           </td>
           <td>
-            <a href="#">download</a>
+            <%= link_to "download", "#" %>
           </td>
         </tr>
       </table>
