--- a/app/views/forms/new_customer.html.erb
+++ b/app/views/forms/new_customer.html.erb
@@ -102,7 +102,7 @@
 
       <div class="form-group form-actions">
       <div class="col-sm-offset-2 col-sm-10">
-        <a href="<%= new_customer_forms_path %>" class="btn btn-default">Cancel</a>
+        <%= link_to "Cancel", new_customer_forms_path, class: "btn btn-default" %>
           <button type="submit" class="btn btn-success">Save customer</button>
       </div>
       </div>
