--- a/app/views/reports/sales.html.erb
+++ b/app/views/reports/sales.html.erb
@@ -9,8 +9,8 @@
     Reports / Sales this Year by Month
   </div>
   <div class="options pull-right hidden-xs">
-    <a href="#"><i class="fa fa-print"></i> Print</a>
-    <a href="#"><i class="fa fa-download"></i> Download</a>
+    <%= link_to "<i class="fa fa-print"></i> Print", "#" %>
+    <%= link_to "<i class="fa fa-download"></i> Download", "#" %>
   </div>
   <div class="date-range pull-right">
     <div class="input-group input-group-sm">
@@ -37,11 +37,11 @@
         Edit properties <span class="caret"></span>
         </button>
         <ul class="dropdown-menu" role="menu">
-        <li><a href="#">Action</a></li>
-        <li><a href="#">Another action</a></li>
-        <li><a href="#">Something else here</a></li>
+        <li><%= link_to "Action", "#" %></li>
+        <li><%= link_to "Another action", "#" %></li>
+        <li><%= link_to "Something else here", "#" %></li>
         <li class="divider"></li>
-        <li><a href="#">Separated link</a></li>
+        <li><%= link_to "Separated link", "#" %></li>
         </ul>
     </div>
   </div>
@@ -65,7 +65,7 @@
       <tbody>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>January</td>
           <td>34</td>
@@ -74,7 +74,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>February</td>
           <td>153</td>
@@ -83,7 +83,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>March</td>
           <td>67</td>
@@ -92,7 +92,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>April</td>
           <td>89</td>
@@ -101,7 +101,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>May</td>
           <td>22</td>
@@ -110,7 +110,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>June</td>
           <td>145</td>
@@ -119,7 +119,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>July</td>
           <td>123</td>
@@ -128,7 +128,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>August</td>
           <td>78</td>
@@ -137,7 +137,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>September</td>
           <td>55</td>
@@ -146,7 +146,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>October</td>
           <td>203</td>
@@ -155,7 +155,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>November</td>
           <td>134</td>
@@ -164,7 +164,7 @@
         </tr>
         <tr>
           <td>
-            <a href="#">#2014</a>
+            <%= link_to "#2014", "#" %>
           </td>
           <td>December</td>
           <td>166</td>
